@@ -39,22 +39,22 @@ MD5 ef24fb627241356bac4842d52ae10a55 files/sshd.rc6 1895
 RMD160 ab773dbbe1b539a3639e321ec5c4d18c6a697912 files/sshd.rc6 1895
 SHA256 068251ba84e72d06fa96e935ed575ad75b2dc607d73ca48e440884c625883f67 files/sshd.rc6 1895
 DIST openssh-4.4p1+SecurID_v1.3.2.patch 48240 RMD160 45d5734f7e65709cce581f1f85c06f60a73b825b SHA1 10bece428f6f36a0bb59b8fe9b9fb4321b544fa5 SHA256 189ad59139d86e5c808650add131af20ade00439713c3abcfac9a4e53580a196
-DIST openssh-4.4p1+x509-5.5.1.diff.gz 137417 RMD160 34cf39583e8c01bb055671a540c7463f45134960 SHA1 091e7499726fce527afeb66fffaf6ee48f4ac4bb SHA256 bb2936a0c5ffff2f5db41a7da83390a189dc4590f9a95325c252d81b9b693ded
 DIST openssh-4.4p1-hpn12v13.diff.gz 15392 RMD160 b057f9a1068ddce106a94465953bdac58d0ffac8 SHA1 00a677a7dd75c98db14a91814da49b8fd7b7d814 SHA256 2e3c6a108072eb9de3330cda8639b8c54845174e3a4691a895d06d5cbf221245
+DIST openssh-4.5p1+x509-5.5.2.diff.gz 137561 RMD160 2e7597bc97d634ecc3d434cc714cc5b1d4076fec SHA1 5f29fbf73a991d778f81f9029fd90ffc4be9b726 SHA256 580b9b2be2a5224852f9979180fa9570059c1aa398b908dc1907d2a5a5e1f4a2
 DIST openssh-4.5p1.tar.gz 965925 RMD160 3f70b6f4228e84c7b9b8b3bee7fd3875f3e3bad3 SHA1 2eefcbbeb9e4fa16fa4500dec107d1a09d3d02d7 SHA256 7046b9d372f9e31ca654a66492310c188470480ddab300eb715dbf5e2177ae55
 DIST openssh-lpk-4.4p1-0.3.7.patch 61187 RMD160 90b0bbe07a3617f6eecb9f77c1a38c5f4dd4dcaf SHA1 b1854a4391c5d11f1a5ab09059643bbaf2278009 SHA256 c74aa642b4b2eeceb0c3f554752d172f8d5a7cd30f2aae517e93ef3bf1bd24e7
-EBUILD openssh-4.5_p1.ebuild 5387 RMD160 f92858660e562633c00996ef1fcdf0a7b09e2ff9 SHA1 e316a49209f8fe0ce9e10120e73812d2328e0100 SHA256 0695cd841888558a26e18fd931394f7abb9a880a64503f5a698c4b341213d297
-MD5 0876253e66426c68f8188fa2bfa15bba openssh-4.5_p1.ebuild 5387
-RMD160 f92858660e562633c00996ef1fcdf0a7b09e2ff9 openssh-4.5_p1.ebuild 5387
-SHA256 0695cd841888558a26e18fd931394f7abb9a880a64503f5a698c4b341213d297 openssh-4.5_p1.ebuild 5387
-MISC ChangeLog 35147 RMD160 2e0776f547cda8f790ae1fe35e65aca62ffe1893 SHA1 ab5615b1c06a3bac338ce24a6d141c048f136170 SHA256 5b2c7dcb86044d265152ef30af56ca37942e1f14d46311eefb71ddbbc7eeada1
-MD5 97935dbbaadea14ae2718fd686fb942b ChangeLog 35147
-RMD160 2e0776f547cda8f790ae1fe35e65aca62ffe1893 ChangeLog 35147
-SHA256 5b2c7dcb86044d265152ef30af56ca37942e1f14d46311eefb71ddbbc7eeada1 ChangeLog 35147
+EBUILD openssh-4.5_p1.ebuild 5395 RMD160 96d48e6b041ccd36f231efb0228b741416bdc282 SHA1 e82ea12d9b35278955c459e09890dcb8985fb8eb SHA256 d210736ed6d72fcffb06eecd89123ae0727d6954646130b0bc127db94f082eb7
+MD5 d83c4057a3cc1e4bdc8081ba6b826cbb openssh-4.5_p1.ebuild 5395
+RMD160 96d48e6b041ccd36f231efb0228b741416bdc282 openssh-4.5_p1.ebuild 5395
+SHA256 d210736ed6d72fcffb06eecd89123ae0727d6954646130b0bc127db94f082eb7 openssh-4.5_p1.ebuild 5395
+MISC ChangeLog 35262 RMD160 8d06736bd014b82e60d3acba9283c95a8c2c1cd0 SHA1 1d071a7f34356dbabe902fea04e4c89bec600c8d SHA256 8e369cacadc668e389d79f46bdc207d21aac93b137a8285e98e94041a01295ec
+MD5 53b7641c262ac368ccd3539e41c9ac72 ChangeLog 35262
+RMD160 8d06736bd014b82e60d3acba9283c95a8c2c1cd0 ChangeLog 35262
+SHA256 8e369cacadc668e389d79f46bdc207d21aac93b137a8285e98e94041a01295ec ChangeLog 35262
 MISC metadata.xml 1287 RMD160 9be6778c10712b2613792647256f309898f52828 SHA1 38d05973334ed37cb9ee3778df3cf3b1369b6b81 SHA256 fbd731005f40dec6baf09aae0ba15a994e1ae448f4aa70ecd078db4b1a2feda3
 MD5 d536c311ded25994241e9708f293c9f7 metadata.xml 1287
 RMD160 9be6778c10712b2613792647256f309898f52828 metadata.xml 1287
 SHA256 fbd731005f40dec6baf09aae0ba15a994e1ae448f4aa70ecd078db4b1a2feda3 metadata.xml 1287
-MD5 64cff69d58e4c2cdc9c581aa1e2cbba9 files/digest-openssh-4.5_p1 1331
-RMD160 c114423695ba7e5500538df8e05431c81f8c530e files/digest-openssh-4.5_p1 1331
-SHA256 27ce31a990deba38519671621972013ac2e768ebbdaf35fa6f9e577344540e91 files/digest-openssh-4.5_p1 1331
+MD5 0ca190bda15710a44d4366729d477879 files/digest-openssh-4.5_p1 1331
+RMD160 2f6a27bb47bbd33d28287317add65fa2b947f1cd files/digest-openssh-4.5_p1 1331
+SHA256 b53182301e34ffc9004ad9c4eaff9e252567f2550c6f3df7f5a631bab9d2493d files/digest-openssh-4.5_p1 1331
