@@ -1,12 +1,12 @@
 MD5 4a374fe5f6c353bc051b00781de8067c openssh-4.4p1+SecurID_v1.3.2.patch 48240
 RMD160 45d5734f7e65709cce581f1f85c06f60a73b825b openssh-4.4p1+SecurID_v1.3.2.patch 48240
 SHA256 189ad59139d86e5c808650add131af20ade00439713c3abcfac9a4e53580a196 openssh-4.4p1+SecurID_v1.3.2.patch 48240
-MD5 132f5ae282de4ff822a95591720da8fd openssh-4.4p1+x509-5.5.1.diff.gz 137417
-RMD160 34cf39583e8c01bb055671a540c7463f45134960 openssh-4.4p1+x509-5.5.1.diff.gz 137417
-SHA256 bb2936a0c5ffff2f5db41a7da83390a189dc4590f9a95325c252d81b9b693ded openssh-4.4p1+x509-5.5.1.diff.gz 137417
 MD5 b08b232eb9830a84909bcc9a9abda38c openssh-4.4p1-hpn12v13.diff.gz 15392
 RMD160 b057f9a1068ddce106a94465953bdac58d0ffac8 openssh-4.4p1-hpn12v13.diff.gz 15392
 SHA256 2e3c6a108072eb9de3330cda8639b8c54845174e3a4691a895d06d5cbf221245 openssh-4.4p1-hpn12v13.diff.gz 15392
+MD5 9a7987815f6901150f843dd21d8a339e openssh-4.5p1+x509-5.5.2.diff.gz 137561
+RMD160 2e7597bc97d634ecc3d434cc714cc5b1d4076fec openssh-4.5p1+x509-5.5.2.diff.gz 137561
+SHA256 580b9b2be2a5224852f9979180fa9570059c1aa398b908dc1907d2a5a5e1f4a2 openssh-4.5p1+x509-5.5.2.diff.gz 137561
 MD5 6468c339886f78e8a149b88f695839dd openssh-4.5p1.tar.gz 965925
 RMD160 3f70b6f4228e84c7b9b8b3bee7fd3875f3e3bad3 openssh-4.5p1.tar.gz 965925
 SHA256 7046b9d372f9e31ca654a66492310c188470480ddab300eb715dbf5e2177ae55 openssh-4.5p1.tar.gz 965925
